# swagger.yaml
@@ -1,43 +1,39 @@
-swagger: '2.0'
+openapi: "3.0.1"
 info:
   title: learntechpuzz-api
   version: 1.0.0
-schemes:
-  - https
-consumes:
-  - application/json  
-produces:
-  - application/json
 paths:
   /user:
     post:
       x-amazon-apigateway-request-validator: all
+      requestBody:
+         description: A JSON object containing user information
+         required: true
+         content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
       parameters:
         - in: "header"
           name: "Authorization"
           required: true
-          type: "string"
-        - in: "body"
-          name: "User"
-          required: true
           schema:
-            $ref: "#/definitions/User"
+            type: "string"
       responses:
         200:
-          description: "successful operation"
-          schema:
-            $ref: '#/definitions/ApiResponse'
-          headers:
-            Access-Control-Allow-Origin:
-              type: "string"
-            Access-Control-Allow-Methods:
-              type: "string"
-            Access-Control-Allow-Headers:
-              type: "string"
+          description: "200 response"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiResponse"
+        400:
+          description: "Invalid request body"
+          content: {}
+        500:
+          description: "Internal server error"
       security:
         - ApiCognitoAuthorizer: []              
       x-amazon-apigateway-integration:
-        type: "aws_proxy"
         uri: 
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${CreateUserFunction.Arn}/invocations
         responses:
@@ -46,36 +42,38 @@ paths:
         passthroughBehavior: "when_no_match"
         httpMethod: "POST"
         contentHandling: "CONVERT_TO_TEXT"
-securityDefinitions:
-  ApiCognitoAuthorizer:
-    type: apiKey
-    name: Authorization
-    in: header
-    x-amazon-apigateway-authtype: cognito_user_pools
-    x-amazon-apigateway-authorizer:
-      type: cognito_user_pools
-      providerARNs:
-        - Fn::Sub: ${UserPool.Arn}
-definitions:
-  User:
-    type: object
-    properties:
-      username:
-        type: string
-      name:
-        type: string
-      email:
-        type: string
-      mobile:
-        type: string
-    required:
-      - id
-      - name
-      - email
-      - mobile
-  ApiResponse:
-    type: object
-    properties: {}
+        type: "aws_proxy"
+components:
+  securitySchemes:
+    ApiCognitoAuthorizer:
+      type: apiKey
+      name: Authorization
+      in: header
+      x-amazon-apigateway-authtype: cognito_user_pools
+      x-amazon-apigateway-authorizer:
+        type: cognito_user_pools
+        providerARNs:
+          - Fn::Sub: ${UserPool.Arn}
+  schemas:
+    User:
+      type: object
+      properties:
+        username:
+          type: string
+        name:
+          type: string
+        email:
+          type: string
+        mobile:
+          type: string
+      required:
+        - username
+        - name
+        - email
+        - mobile
+    ApiResponse:
+      type: object
+      properties: {}
 x-amazon-apigateway-request-validators:
   all:
     validateRequestBody: true
